[package]
name = "sunspec-models"
description = "Sunspec Models library - may be used with any modbus library"
version = "0.5.20"
authors = [
    "Gustavo Weber Denardin <gustavo.denardin@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["modbus", "sunspec", "smartgrid"]
homepage = "https://github.com/gustavowd/sunspec-models"
repository = "https://github.com/gustavowd/sunspec-models"
include = ["src", "CHANGELOG.md", "README.md", "LICENSES"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1.0.96"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = [ "full" ] }
tokio-modbus = {version = "0.16.1", features=["tcp", "tcp-server"]}

[[example]]
name = "server"
path = "examples/server.rs"
