[package]
name = "server_example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
futures = "0.3.31"
futures-time = "3.0.0"
futures-util = "0.3.31"
once_cell = "1.21.1"
pem = "3.0.5"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem", "std"] }
pki-types = { package = "rustls-pki-types", version = "1.11.0" }
tokio = { version = "1.44.1", features = [ "full" ] }
tokio-modbus = {version = "=0.16.1", features=["rtu", "tcp", "tcp-server"]}
tokio-rustls = "0.26.2"
rust-ini = "0.21.1"
rustls-pemfile = "2.2.0"
webpki-roots = "0.26.8"
sunspec-models = { path = "../../" }
